<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_app"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCantidadManillas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_cantidad_manilla"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/rdbtnMaterialManilla"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_escoger_material"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbtnMaterialCuero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_opcion_material_1" />

        <RadioButton
            android:id="@+id/rdbtnMaterialCuerda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_opcion_material_2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_escoger_dije"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sltTipoDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/txt_escoger_material_dije"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sltMaterialDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rdbtnTipoMoneda"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rdbtnMonedaCop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_unidad_tipo_moneda_1" />

        <RadioButton
            android:id="@+id/rdbtnMonedaUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_unidad_tipo_moneda_2" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalular"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:onClick="calculo"
            android:text="@string/txt_btn_calcular" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/txt_btn_limpiar" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblTotalPagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>